--- a/app/globals.css
+++ b/app/globals.css
@@ -12,8 +12,18 @@
     --popover-foreground: 222.2 84% 4.9%;
     --primary: 221.2 83.2% 53.3%;
     --primary-foreground: 210 40% 98%;
-    --secondary: 142.1 76.2% 36.3%;
-    --secondary-foreground: 355.7 100% 97.3%;
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --green: 142.1 76.2% 36.3%;
+    --green-foreground: 355.7 100% 97.3%;
+    --rose: 346.8 77.2% 49.8%;
+    --rose-foreground: 355.7 100% 97.3%;
+    --yellow: 47.9 95.8% 53.1%;
+    --yellow-foreground: 26 83.3% 14.1%;
+    --orange: 24.6 95% 53.1%;
+    --orange-foreground: 60 9.1% 97.8%;
+    --violet: 262.1 83.3% 57.8%;
+    --violet-foreground: 210 20% 98%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 210 40% 96.1%;
@@ -35,8 +45,18 @@
     --popover-foreground: 210 40% 98%;
     --primary: 217.2 91.2% 59.8%;
     --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 142.1 70.6% 45.3%;
-    --secondary-foreground: 144.9 80.4% 10%;
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+    --green: 142.1 70.6% 45.3%;
+    --green-foreground: 144.9 80.4% 10%;
+    --rose: 346.8 77.2% 49.8%;
+    --rose-foreground: 355.7 100% 97.3%;
+    --yellow: 47.9 95.8% 53.1%;
+    --yellow-foreground: 26 83.3% 14.1%;
+    --orange: 20.5 90.2% 48.2%;
+    --orange-foreground: 60 9.1% 97.8%;
+    --violet: 263.4 70% 50.4%;
+    --violet-foreground: 210 20% 98%;
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
     --accent: 217.2 32.6% 17.5%;
