add color scheme

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,9 @@
   * {
     @apply border-border;
   }
+  html {
+    color-scheme: light dark;
+  }
   body {
     @apply bg-background text-foreground;
   }
